# backend/internal/dto/model_notify_activities_bulk_request.go
@@ -1,0 +1,17 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type NotifyActivitiesBulkRequest struct {
+
+	ActivityIds []string `json:"activityIds"`
+
+	Type string `json:"type,omitempty"`
+}
