# backend/internal/dto/model_notify_deadline_soon_request.go
@@ -1,0 +1,15 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type NotifyDeadlineSoonRequest struct {
+
+	Days int32 `json:"days"`
+}
